test/functions/return-type-class-hierarchy/unrelated-no-common-parent.2.good
unrelated-no-common-parent.chpl:4: error: unable to resolve return type
